--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.RegisterActivity"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp"
+    android:background="#ffffff">
 
 
     <ImageView
@@ -26,6 +27,7 @@
 
     <EditText
         android:hint="Mail"
+        android:background="@drawable/register_edittext_style"
         android:id="@+id/registerMail"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -40,6 +42,7 @@
 
     <EditText
         android:hint="Name"
+        android:background="@drawable/register_edittext_style"
         android:id="@+id/registerName"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -61,6 +64,7 @@
 
     <EditText
         android:hint="Password"
+        android:background="@drawable/register_edittext_style"
         android:id="@+id/registerPassword"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -76,6 +80,7 @@
 
     <EditText
         android:hint="Confirm Password"
+        android:background="@drawable/register_edittext_style"
         android:id="@+id/registerPassword2"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -92,7 +97,7 @@
 
     <Button
         android:id="@+id/registerButton"
-        android:layout_width="wrap_content"
+        android:layout_width="151dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -100,7 +105,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/register_button_style"
         android:text="Button"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
