--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/registerUserPhoto"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="8dp"
