--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,30 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".Activities.RegisterActivity"
-    tools:layout_editor_absoluteY="81dp"
-    android:background="#ffffff">
+    tools:layout_editor_absoluteY="81dp">
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/registerUserPhoto"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:src="@drawable/userphoto"
         app:layout_constraintBottom_toTopOf="@+id/registerName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.372"
-        app:srcCompat="@drawable/userphoto" />
+        app:layout_constraintVertical_bias="0.372" />
 
     <EditText
-        android:hint="Mail"
-        android:background="@drawable/register_edittext_style"
         android:id="@+id/registerMail"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -36,13 +34,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/register_edittext_style"
+        android:hint="Mail"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:hint="Name"
-        android:background="@drawable/register_edittext_style"
         android:id="@+id/registerName"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -51,6 +49,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/register_edittext_style"
+        android:hint="Name"
         app:layout_constraintBottom_toTopOf="@+id/registerMail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -63,8 +63,6 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <EditText
-        android:hint="Password"
-        android:background="@drawable/register_edittext_style"
         android:id="@+id/registerPassword"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -72,15 +70,15 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="@drawable/register_edittext_style"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <EditText
-        android:hint="Confirm Password"
-        android:background="@drawable/register_edittext_style"
         android:id="@+id/registerPassword2"
         android:layout_width="265dp"
         android:layout_height="wrap_content"
@@ -89,7 +87,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="@drawable/register_edittext_style"
         android:ems="10"
+        android:hint="Confirm Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
